fix for blurry charts and remove vertical grid lines

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -119,6 +119,10 @@
     .charts {
         @apply py-8 bg-gray-50;
     }
+
+    .charts canvas {
+        image-rendering: pixelated;
+    }
 }
 
 @layer utilities {
